[feat] `/actuator/refresh` 로 설정 정보 업데이트 요청